# SUMM-Todo

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  DEPLOY.md  README.md  install.sh  summ-todo-prd-v2.md  update.sh
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  db.rs  lib.rs  main.rs  output.rs  time_parse.rs
crates/cli/src/commands/: abandon.rs  import.rs  list.rs  log.rs  mod.rs  next.rs  resume.rs  show.rs  start.rs  stats.rs  sync.rs  undo.rs
crates/cli/src/sync/: client.rs  tracker.rs
crates/cli/tests/: commands_test.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  task.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  db.rs  handlers.rs  main.rs  router.rs
docs/: agent-integration.md  v0.1.0-release.md  v0.2.0-release.md  v0.3.0-release.md
docs/plans/: 2026-02-24-mvp-implementation.md  2026-02-24-technical-design.md  2026-02-25-task-content-field.md  2026-02-25-task-content-impl.md  2026-02-25-v0.3.0-roadmap.md  2026-02-26-project-feature-design.md  2026-02-26-project-implementation.md  2026-04-10-sync-design.md  2026-04-11-sync-implementation.md
homebrew/: todo.rb
migrations/: v1.sql  v2.sql  v3.sql  v4.sql  v5.sql
src/: cli.rs  db.rs  error.rs  id.rs  lib.rs  main.rs  output.rs  task.rs  time_parse.rs
src/commands/: add.rs  block.rs  cancel.rs  done.rs  edit.rs  export.rs  import.rs  list.rs  mod.rs  project.rs  search.rs  stats.rs
tests/: commands_test.rs  project_test.rs
