[package]
name = "todo"
version = "0.2.0"
edition = "2021"

[dependencies]
argh = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
uuid = { version = "1.0", features = ["v7"] }
dirs = "5.0"
toon-format = "0.4"

[dev-dependencies]
tempfile = "3.0"
