[package]
name = "todo"
version = "0.3.1"
edition = "2021"

[dependencies]
todo-core = { path = "../core" }
argh = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
uuid = { version = "1.0", features = ["v7"] }
dirs = "5.0"
toon-format = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
