[package]
name = "summ-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
todo-core = { path = "../core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
